leptos_macro/tests/view/06_concrete_props_multiple_one_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/view/06_concrete_props_multiple_one_wrong_type.rs:16:20
   |
16 |             <Inner concrete_bool concrete_i32=3/>
   |                    ^^^^^^^^^^^^^
   |                    |
   |                    expected `bool`, found integer
   |                    arguments to this method are incorrect
   |
note: method defined here
  --> tests/view/06_concrete_props_multiple_one_wrong_type.rs:22:10
   |
22 | fn Inner(concrete_bool: bool, concrete_i32: i32) -> impl IntoView {
   |          ^^^^^^^^^^^^^------
